# ClassQL

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  TEST_QUERIES.md  tree-viz.sh
classy/: classes.db
docs/: abstract.md  design.md  grammar.md  schema.md  schema.txt
save/: 1768538589.sav  1768539351.sav
src/: lib.rs  main.rs  mod.rs
src/compiler/: compiler.rs  driver.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/data/: README.md  classes.db  mod.rs  pool.rs  sql.rs  sync.rs
src/debug_utils/: mod.rs  tree-viz.sh
src/dsl/: README.md  codegen.rs  compiler.rs  lexer.rs  mod.rs  parser.rs  semantic.rs  token.rs
src/query/: mod.rs
src/sql/: mod.rs
src/tui/: app.rs  errors.rs  mod.rs  render.rs  save.rs  state.rs  themes.rs  tui.rs
src/utils/: mod.rs  visualizetree.rs
tests/: README.md  codegen_tests.rs  lexer_tests.rs  mod.rs  parser_tests.rs  semantic_tests.rs  tests.md
tests/codegen/: basic_queries.json  codegen_tests.rs  day_queries.json  edge_cases.json  mod.rs  numeric_queries.json  string_conditions.json  time_queries.json
tests/lexer/: README.md  basic_keywords.json  boundary_tests.json  complex_queries.json  core_tokens.json  core_tokens_edge_cases.json  core_tokens_stress_tests.json  days.json  edge_cases.json  lexer_tests.rs  literals.json  malformed_tests.json  mod.rs  operators.json  parentheses_grouping_tests.json  stress_tests.json  time_edge_cases.json  time_queries.json  unrecognized_tests.json  whitespace.json
tests/parser/: advanced_logical_expressions.json  all_keyword_variations.json  basic_valid_queries.json  (+17 more)
(+77 files in other folders)
