[package]
name = "classql"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.8.2"
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.clippy]
uninlined_format_args = "allow"
