[package]
name = "classql"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
regex = "1.10.2"
serde_json = "1.0"
petgraph = "0.8.2"
classy-sync = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[lints.clippy]
uninlined_format_args = "allow"
